<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cz.uruba.slevnicek.MainActivity$PlaceholderFragment"
    android:descendantFocusability="beforeDescendants"
	android:focusableInTouchMode="true"
    android:background="@color/white">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_first_row"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        >

        <TableRow>
            <Spinner
                android:id="@+id/textPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/editPriceLayout">

                <EditText
                    android:id="@+id/editPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/editPriceTextSize"
                    android:inputType="numberDecimal"
                    android:hint="@string/zero_float"
                    android:imeOptions="flagNoExtractUi">
                </EditText>

                <TextView
                    android:id="@+id/textCurrency1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="@dimen/inline_symbol_margin"
                    android:textSize="@dimen/editPriceInlineTextSize"
                    android:textColor="@color/light_grey"
                    />

            </FrameLayout>

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textDiscountValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount_percentage"
                android:textSize="@dimen/textDiscountValue"
                android:textColor="@color/black"
                android:layout_gravity="right|center_vertical"
                android:paddingRight="2dp"
                />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/editDiscountValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:textSize="@dimen/editDiscountTextSize"
                    android:hint="@string/zero"
                    android:inputType="number"
                    android:imeOptions="flagNoExtractUi"
                    >
                </EditText>

                <TextView
                    android:id="@+id/textPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="@dimen/inline_symbol_margin"
                    android:text="@string/percent"
                    android:textSize="@dimen/editDiscountInlineTextSize"
                    android:textColor="@color/light_grey" />

            </FrameLayout>

        </TableRow>


    </TableLayout>

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:divider="?android:dividerHorizontal"
        android:gravity="center"
        android:orientation="vertical"
        android:showDividers="middle" />
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_first_row"
        android:orientation="horizontal">


       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="24dp"

            android:orientation="vertical" >

            <TextView
                android:id="@+id/textPrice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />

            <TextView
                android:id="@+id/textPriceResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na"
                android:textSize="@dimen/textResultPrice"
                />

            <TextView
                android:id="@+id/textYouSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_save"
                />

            <TextView
                android:id="@+id/textYouSaveResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na"
                />

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>