<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TableLayout
        android:id="@+id/layout_first_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/component_margin">

        <TableRow>

            <TextView
                android:id="@+id/textPriceBefore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:text="@string/spinner_price_before"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/valueLabelsTextSize"
                android:paddingRight="@dimen/formTextViewPadding" />

            <FrameLayout
                android:id="@+id/editPriceBeforeLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/editPriceBefore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/zero_float"
                    android:imeOptions="flagNoExtractUi|actionNext"
                    android:inputType="numberDecimal"
                    android:textColor="@color/theme_red"
                    android:textSize="@dimen/valueEditableFieldsTextSize"
                    android:includeFontPadding="false"
                     />

                <TextView
                    android:id="@+id/textCurrencyInlineBefore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="@dimen/inline_symbol_margin"
                    android:textColor="@color/light_grey"
                    android:textSize="@dimen/valueInlineTextSize" />

            </FrameLayout>

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textPriceAfter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:text="@string/spinner_price_after"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/valueLabelsTextSize"
                android:paddingRight="@dimen/formTextViewPadding" />

            <FrameLayout
                android:id="@+id/editPriceAfterLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/editPriceAfter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/zero_float"
                    android:imeOptions="flagNoExtractUi|actionDone"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/valueEditableFieldsTextSize"
                    android:includeFontPadding="false"/>

                <TextView
                    android:id="@+id/textCurrencyInlineAfter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="@dimen/inline_symbol_margin"
                    android:textColor="@color/light_grey"
                    android:textSize="@dimen/valueInlineTextSize" />

            </FrameLayout>

        </TableRow>


    </TableLayout>


    <View
        android:id="@+id/layout_divider"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/layout_first_row"
        android:layout_marginBottom="@dimen/component_margin"
        android:background="@drawable/gradient_divider"
        android:layerType="software" />


    <LinearLayout
        android:id="@+id/layout_price_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_divider"
        android:gravity="center_horizontal"

        android:layout_marginBottom="@dimen/margin_divider"

        android:orientation="vertical">

        <TextView
            android:id="@+id/textPrice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/discount_percentage_explicit" />

        <TextView
            android:id="@+id/textDifferencePercentResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:includeFontPadding="false"
            android:text="@string/na"
            android:textSize="@dimen/textResultPrice"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_you_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_price_result"
        android:gravity="center_horizontal"

        android:orientation="vertical">

        <TextView
            android:id="@+id/textYouSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textYouSaveResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/na"
            android:textSize="@dimen/valueResultYouSaveTextSize"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text=" = "
                android:textColor="@color/light_grey"
                android:textSize="@dimen/valueResultYouSaveTextSizeCalculation" />

            <TextView
                android:id="@+id/textPriceBeforeMinusPriceAfter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textColor="@color/light_grey"
                android:textSize="@dimen/valueResultYouSaveTextSizeCalculation" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>